--- a/src/style/Dropdown.css
+++ b/src/style/Dropdown.css
@@ -1,52 +1,57 @@
-.box{
-	position: absolute;
-	top: 80%;
-	left: 50%;
-	transform: translate(-50%,-50%);
+.box {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-.box select{
-	background: #FFE81F;
-	color: #333;
-	padding: 10px;
-	width: 300px;
-	height: 50px;
-	border: none;
-	font-size: 20px;
-	box-shadow: 0 5px 25px rgba(0, 0, 0, .5);
-	-webkit-appearance: button;
-	outline: none;
+.box select {
+  background: #ffe81f;
+  color: #333;
+  padding: 10px;
+  width: 300px;
+  height: 50px;
+  border: none;
+  font-size: 20px;
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.5);
+  -webkit-appearance: button;
+  outline: none;
 }
-.box::before{
-	content: '\f103';
-	font-family: fontAwesome;
-	position: absolute;
-    cursor: pointer;
-	top: 0;
-	right: 0;
-	width: 50px;
-	text-align: center;
-	line-height: 50px;
-	color: #333;
-	font-size: 28px;
-	height: 50px;
-	background: #FFE81F;
-	pointer-events: none;
-    animation: arrow 2s alternate infinite;
+.box::before {
+  content: "\f103";
+  font-family: fontAwesome;
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  right: 0;
+  width: 50px;
+  text-align: center;
+  line-height: 50px;
+  color: #333;
+  font-size: 28px;
+  height: 50px;
+  background: #ffe81f;
+  pointer-events: none;
+  animation: arrow 2s alternate infinite;
 }
-@keyframes arrow{
-    0%{
-       color: #777;
-    }
-    100%{
-       color:#222;
-    }
+@keyframes arrow {
+  0% {
+    color: #777;
+  }
+  100% {
+    color: #222;
+  }
 }
-.box:hover::before{
-	background: #FFE81F;
+.box:hover::before {
+  background: #ffe81f;
 }
-.box option:focus{
-	background: #FFE81F !important;
+.box option:focus {
+  background: #ffe81f !important;
 }
-.box option:hover{
-	background: #FFE81F !important;
+.box option:hover {
+  background: #ffe81f !important;
+}
+@media (max-width: 700px) {
+  .box select {
+    width: 100%;
+  }
 }
