--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -13,11 +13,11 @@ body {
   width: 100%;
   height: 100%;
 }
-.bgPulse img{
+.bgPulse img {
   position: absolute;
   top: 40%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 .bgPulse .span {
   position: absolute;
@@ -87,5 +87,19 @@ body {
   100% {
     transform: scale(1) translateY(-100px) rotate(360deg);
     opacity: 0;
+  }
+}
+hr {
+  position: absolute;
+  top: 85%;
+  width: 100%;
+  border: 5px solid #ffe81f;
+}
+@media (max-width: 700px) {
+  .bgPulse img {
+    max-width: 90%;
+  }
+  .box select {
+    width: 100%;
   }
 }
